# sshm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: README.md  architecture.md  usage.md
docs/superpowers/plans/: 2026-06-11-sshm-implementation.md  2026-06-13-tui-screen-refactor.md
docs/superpowers/specs/: 2026-06-11-sshm-implementation-design.md
scripts/: render_screenshot.py
src/sshm/: __init__.py  __main__.py  cli.py  crypto.py  io.py  session.py  ssh.py  transfer.py  tui.py  vault.py
tests/: test_cli.py  test_crypto.py  test_io.py  test_session.py  test_ssh.py  test_transfer.py  test_tui.py  test_vault.py  test_version.py
